<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:layout_margin="16dp"
    >

    <TextView
        android:id="@+id/hero_fight_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/hero_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="56dp" />

    <ImageView
        android:id="@+id/ivHeroFightPic"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/herofightimage"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_fight_page"
        app:srcCompat="@mipmap/login_background" />

    <ImageView
        android:id="@+id/ivDamageAnimation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:alpha="0.0"
        android:background="@color/red"
        android:contentDescription="@string/damagetint"
        app:layout_constraintBottom_toBottomOf="@+id/ivHeroFightPic"
        app:layout_constraintEnd_toEndOf="@+id/ivHeroFightPic"
        app:layout_constraintStart_toStartOf="@+id/ivHeroFightPic"
        app:layout_constraintTop_toTopOf="@+id/ivHeroFightPic" />

    <TextView
        android:id="@+id/ouch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ouch"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:alpha="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/ivHeroFightPic"
        app:layout_constraintEnd_toEndOf="@+id/ivHeroFightPic"
        app:layout_constraintStart_toStartOf="@+id/ivHeroFightPic"
        app:layout_constraintTop_toTopOf="@+id/ivDamageAnimation" />

    <TextView
        android:id="@+id/life_bar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/life_readout"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/ivHeroFightPic"
        app:layout_constraintTop_toBottomOf="@+id/ivHeroFightPic" />

    <ProgressBar
        android:id="@+id/lifebar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/cardview_dark_background"
        android:max="100"
        android:indeterminateOnly="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/life_bar_label"
        android:progress="100"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifebar">

        <Button
            android:id="@+id/take_damage_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/take_damage" />

        <Button
            android:id="@+id/heal_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/heal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>